[package]
name = "chapter04"
version = "0.1.0"
authors = ["SunDoge <384813529@qq.com>"]
edition = "2018"

[dependencies]
horrorshow = "0.6"
gdk = "0.9"
pango = "0.5"
pulldown-cmark = "0.1"
tiny-keccak = "1.4"
webkit2gtk = "0.5"

[dependencies.gtk]
version = "0.5"
features = ["v3_22"]

[dependencies.sourceview]
version = "0.5"
features = ["v3_22"]